<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="52sp"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="25dp"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_one"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/grey"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/split_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/split"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/bill_amount"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

            <TextView
                android:id="@+id/bill_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/bill_amount"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bill_amount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/grey_dark"
                android:defaultFocusHighlightEnabled="false"
                android:hint="@string/enter_amount"
                android:padding=".5dp"
                android:textColorHint="@color/grey_light"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/blue_light"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/grey_light"
                app:layout_constraintStart_toStartOf="@id/bill_text"
                app:layout_constraintTop_toBottomOf="@+id/bill_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bill_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/people_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_user"
                app:layout_constraintStart_toEndOf="@+id/split_text"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

            <TextView
                android:id="@+id/count_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/people_icon"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

            <ImageView
                android:id="@+id/decrease_button"
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/minus_button_description"
                android:src="@drawable/ic_minus"
                app:layout_constraintStart_toEndOf="@+id/count_split"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

            <ImageView
                android:id="@+id/increase_button"
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/increase_button_description"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toEndOf="@+id/decrease_button"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintStart_toStartOf="@+id/card_one"
        app:layout_constraintTop_toBottomOf="@+id/card_one" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/gratuity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/gratuity"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:valueFrom="0"
                android:valueTo="50"
                android:stepSize="1"
                android:value="15"
                android:contentDescription="@string/slider_description"
                app:layout_constraintStart_toStartOf="@+id/gratuity_text"
                app:layout_constraintTop_toBottomOf="@+id/gratuity_text"
                app:thumbColor="@color/blue"
                app:trackColorActive="@color/blue"
                app:trackColorInactive="@color/grey_light" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="4dp"
                android:checked="true"
                android:text="@string/round_up_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_three"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:backgroundTint="@color/grey"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/card_two"
        app:layout_constraintStart_toStartOf="@+id/card_two"
        app:layout_constraintTop_toBottomOf="@+id/card_two"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_bill"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:text="@string/total"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tip_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tip_amount"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/split_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:text="@string/split_total"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tip_result"
                app:layout_constraintTop_toBottomOf="@+id/tip_result" />

            <TextView
                android:id="@+id/bill_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/total_bill"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/split_total"
                app:layout_constraintTop_toBottomOf="@+id/split_total" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>